--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,8 +48,14 @@ steps:
 #    python manage.py test --testrunner xmlrunner.extra.djangotestrunner.XMLTestRunner --no-input
 #  displayName: 'Run tests'
 
+- script: |
+    pip install pytest
+    pip install pytest-cov
+    pytest tests --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+  displayName: 'Test with pytest'
+
 - task: PublishTestResults@2
-  inputs:
-    testResultsFiles: "**/TEST-*.xml"
-    testRunTitle: 'Python $(PYTHON_VERSION)'
   condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: '**/test-*.xml'
+    testRunTitle: 'Publish test results for Python $(python.version)'
