--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,27 @@
+@@ -1,13 +1,13 @@
 # Python Django
 # Test a Django project on multiple versions of Python.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - master
 
 pool:
-  vmImage: 'vs2017-win2016'
-
+  vmImage: 'vvs2017-win2016'
+strategy:
+  matrix:
+    Python36:
+      PYTHON_VERSION: '3.6.2'
+  maxParallel: 3
 steps:
+
+
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '3.6'
+    versionSpec: '3.6.2' 
+    addToPath: true 
     architecture: 'x64'
-
+	
 - task: PythonScript@0
   displayName: 'Export project path'
   inputs:
@@ -30,3 +37,12 @@ steps:
       project_location = path.dirname(path.abspath(manage_py))
       print('Found Django project in', project_location)
       print('##vso[task.setvariable variable=projectRoot]{}'.format(project_location))
+	  
+	  
+- script: |
+    python -m pip install --upgrade pip setuptools wheel
+    pip install -r requirements.txt
+    pip install unittest-xml-reporting
+  displayName: 'Install prerequisites'
+  
+  
