--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,5 +38,5 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip setuptools wheel
-    pip install -r requirements.txt
+    pip install -r web2/requirements.txt
     pip install unittest-xml-reporting
